Overhaul/synthesis of method used for obtaining coverage for tracks, corresponding changes to trackview and browserly functions, as well as update to browserly strand information display
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196622 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -43,11 +43,20 @@ sf <- get_scaling_factor(fi[idx,])/1000000
 sf <- sf[2,]
 
 # Get the coverage
-cvg <- get_coverage_in_range(fi[idx, "File.bw"], view_range, shortened_names, sf)
+cvg <- make_coverage_tracks(fi[idx, "File.bw"], 
+                            target_range = view_range, 
+                            sample_names = shortened_names, 
+                            scaling_factors = sf)
 ```
 
 
-```{r Demo}
+```{r Demo_hm}
 plot_browserly_tracks(view_range, tx_data, cvg)
 ```
+
+```{r Demo_line}
+plot_browserly_tracks(view_range, tx_data, cvg, type = "line")
+```
+
+
 
