--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 library(TxDb.Mmusculus.BioMart.igis3.0)
 library(plotly)
-#library(gChipseq)
+library(org.Mm.eg.db)
 library(chipVis)
 ```
 
@@ -27,6 +27,7 @@ genome <- "GRCm38"
 
 ```{r}
 tx_data <- load_tx_data(TxDb.Mmusculus.BioMart.igis)
+symbol_table <- match_tx_to_gene(TxDb.Mmusculus.BioMart.igis, 'org.Mm.eg')
 ```
 
 ```{r}
@@ -56,4 +57,104 @@ plot_browserly_tracks(view_range, tx_data, cvg)
 
 ```{r Demo_line}
 plot_browserly_tracks(view_range, tx_data, cvg, type = "line")
+```
+
+# Plotting multiple genes for several conditions
+```{r}
+# set the gene list
+genes <- c('RNF2', 'E2F1', 'GREB1', 'BAP1')
+
+# Select the indices of the chip-seq experiments
+# c_idx stands for conditions index
+c_idx <- c(2, 6, 10, 14, 19)
+
+# Set how far upstream and downstream  you want to view from the TSS
+extension <- 50000
+```
+
+```{r Multiple Genes, echo=FALSE}
+lib_size <- get_scaling_factor(fi[c_idx,])[2,]/1000000
+conditions <- fi$Genotype[c_idx]
+p_list <- list()
+a_list <- list()
+r_list <- list()
+score_max <- 0
+for(gene in genes){
+  sl <- ifelse(gene == genes[1], TRUE, FALSE)
+  p <- plot_ly(type = 'scatter', showlegend=sl, name=gene)
+  x <- which(symbol_table$symbol == gene)
+  
+  # Get the range of the gene
+  cur_tss <- ifelse(as.character(symbol_table$strand[x]) == "-",
+                    symbol_table$end[x],
+                    symbol_table$start[x])
+  cur_range <- get_view_range(chr = symbol_table$chr[x],
+                              start = cur_tss - extension,
+                              end = cur_tss + extension,
+                              strand = as.character(symbol_table$strand[x]))
+  # Get the coverage in the range
+  cur_cvg <- make_coverage_tracks(fi[c_idx, "File.bw"], 
+                            target_range = cur_range, 
+                            sample_names = conditions, 
+                            scaling_factors = lib_size)
+  # Get max score for scaling y_axes
+  score_max <- max(max(as.data.frame(mcols(cur_cvg)), score_max))
+  cvg_df <- biovizBase::mold(cur_cvg)
+  
+  # Get the relative distances
+  cvg_df$midpoint <- cvg_df$midpoint - cur_tss
+  
+  # Add the coverage as traces
+  for(cond in conditions){
+    p <- p %>% add_trace(x = cvg_df$midpoint, y = cvg_df[[cond]], mode='lines',
+                         name = cond, color=cond)
+  }
+  
+  #Save the annotation information
+  cur_tx <- get_tx_annotation(range=cur_range, tx_data = tx_data)
+  cur_tx$stepping <- -1
+  cur_tx <- biovizBase::mold(cur_tx)
+  cur_tx$start <- cur_tx$start - cur_tss
+  cur_tx$end <- cur_tx$end - cur_tss
+  cur_tx$midpoint <- cur_tx$midpoint - cur_tss
+  a_list[[gene]] <- cur_tx
+  start(cur_range) <- start(cur_range) - cur_tss
+  end(cur_range) <- end(cur_range) - cur_tss
+  r_list[[gene]] <- cur_range
+  
+  # Add invisible annotation handles
+  h_features <- unique(cur_tx$feature)
+  for(h_feature in h_features){
+    h <- cur_tx[cur_tx$feature == h_feature, ]
+    p <- p %>% add_trace(x=h$midpoint, 
+                         y=h$stepping, 
+                         opacity=0,
+                         text = h$transcript, 
+                         name = h_feature,
+                         # color = h_feature,
+                         # colors = rep('grey', length.out = length(h_features)),
+                         hoverinfo="x+name+text",
+                         marker = list(color='grey'),
+                         showlegend=FALSE)
+  }
+  p_list[[gene]] <- p
+}
+sp <- subplot(p_list, nrows=length(p_list), shareX = TRUE)
+
+```
+
+```{r Add annotations, echo=FALSE}
+trace_names <- sapply(sp$x$data, function(x){x$name})
+trace_axes <- lapply(sp$x$data, function(x) {gsub("y", "yaxis", x$yaxis)})
+names(trace_axes) <- trace_names  
+sp2 <- sp
+for(gene in genes){
+  yax <- trace_axes[[gene]]
+  sp2 <- add_tx_shapes(sp2, a_list[[gene]], r_list[[gene]], yax)
+  sp2$x$layout[[yax]][['title']] <- gene
+  sp2$x$layout[[yax]][['range']] <- c(-1.5, score_max)
+}
+sp2$x$layout$showlegend <- TRUE
+sp2$x$layout$xaxis$title <- 'Distance to TSS'
+sp2
 ```
